2015-09-25  Charlie Zender  <zender@uci.edu>

	* Regridding works on MPAS-O 2D bottomDepth but not 3D temperature

	* Apply Tempest src/dst_grid_dims bug workaround to all maps (solves MPAS Ocean problem)

2015-09-22  Charlie Zender  <zender@uci.edu>

	* Implement configure --enable_doc option, attempt and fail to override this if makeinfo version < 4.8

2015-09-20  Charlie Zender  <zender@uci.edu>

	* Change auxiliary coordinate input from float to double

	* Add SNWE and WESN input options for bounding boxes

2015-09-20  Henry Butowsky  <henryb@hush.com>

	* Modify ncap_var_var_op() so that missing values in both operands are equal
	This is expensive when all the missing values in one operand must be replaced
	So for example if v1 and v2 have different mss_val then	diff1=diff2 where
        diff1=total((v1-v2)^2) and diff2=total((v2-v1)^2))

2015-09-17  Charlie Zender  <zender@uci.edu>

	* Add skeleton output grid capability with --rgr skl=fl_skl

	* Document regional features NSEW in nco.texi

	* round() integer-type extensive variables

2015-09-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha03 final changes';git push
	git tag -a 4.5.3-alpha03 -m 'Version 4.5.3-alpha03 tag: --xtn --extensive, ncks HINT, ncecat --gag fix';git push --tags

	* Add regression test (the first one!) for ncecat --gag

	* Reset rcd in ncecat after checking for group existence. Caused ncecat --gag to die. Problem introduced in 4.4.9 on 20150515, and reported by Huan Wu.

	* ncks exit with error when regridding specified without output file

2015-09-15  Charlie Zender  <zender@uci.edu>

	* Implement SLD stubs in nco_grd_nfr()

	* Check return codes in sld_nco.sh

	* Fix grid infer problem caused by segregating lat_typ from grd_typ

2015-09-14  Charlie Zender  <zender@uci.edu>

	* Diagnosed lat, lon, 2D grid-types now self-consistent for regional grids
